log4j from 1.2.15 to 1.2.16 to avoid jmx missing issue; compile from java 1.5 to java 1.8